Created a new function to handle the creation of the game gameUI
The buildBoardUI() is responsible for creating the DOM elements the will reference the board element.

--- a/style.css
+++ b/style.css
@@ -10,6 +10,14 @@ header {
   align-items: center;
 }
 
+.board-container {
+  border: solid 2px black;
+}
+
+.board-container > div {
+  border: solid 2px red;
+}
+
 footer {
   display: flex;
   justify-content: center;
