--- a/style.css
+++ b/style.css
@@ -4,10 +4,11 @@ body {
   min-height: 100vh;
 }
 
-header {
+.welcome-container {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
   align-items: center;
+  margin: auto;
 }
 
 .main-game {
@@ -37,4 +38,8 @@ footer {
   align-items: center;
   gap: 8px;
   margin-top: auto;
+}
+
+.hidden {
+  display: none;
 }
